Agregue mi componente de pokemon

--- a/src/app/components/pokemon/pokemon.component.html
+++ b/src/app/components/pokemon/pokemon.component.html
@@ -1,7 +1,7 @@
 <div class="cards">
   <div class="card" *ngFor="let po of pokemones">
     <div class="imagen">
-      <img src="{{lista.sprites.front_default}}" alt="">
+      <img src="{{po.sprites.front_default}}" alt="">
     </div>
   </div>
 </div>
