--- a/src/app/components/tenis/tenis.component.css
+++ b/src/app/components/tenis/tenis.component.css
@@ -1,3 +1,8 @@
+#mio{
+  padding-left: 15px;
+  font-family: 'Yanone kaffeesatz';
+  font-weight: bold;
+}
 .cards{
   margin-top: 50px;
   width: 100%;
