--- a/src/app/components/tenis/tenis.component.html
+++ b/src/app/components/tenis/tenis.component.html
@@ -1,3 +1,6 @@
+<h1 id="mio">Hoy tenemos las mejores ofertas de ropa <strong>Precio competitivos!</strong></h1>
+<hr>
+
 <div class="cards">
   <div class="card" *ngFor="let lista of tenis; let i = index">
     <div class="card-img">
