--- a/src/app/components/alterno/alterno.component.css
+++ b/src/app/components/alterno/alterno.component.css
@@ -1,3 +1,8 @@
+.principal{
+  width: 500px;
+  margin: 0px auto;
+  text-align: center;
+}
 .contenido{
   width: 100%;
   display: grid;
@@ -5,11 +10,18 @@
   align-items: center;
   text-align: center;
   margin-top: 50px;
+  gap: 50px;
+}
+
+.contenido-img{
+  width: 100%;
+}
+.contenido-img img{
+  width: 300px;
 }
 
 #boton{
   display: block;
-  margin-left: 270px;
   margin-top: 5px;
-  width: 30%;
+  width: 100%;
 }
