--- a/src/app/components/alterno/alterno.component.html
+++ b/src/app/components/alterno/alterno.component.html
@@ -1,11 +1,13 @@
-<div class="contenido">
-  <div class="contenido-img">
-    <img src="{{externo.img}}" alt="">
-    <button class="btn btn-danger" id="boton" (click)="volver()">Volver</button>
-  </div>
-  <div class="contenido-text">
-    <h1>{{externo.marca}}</h1>
-    <p>Lorem ipsum dolor sit amet consectetur. <strong>{{externo.precio}}</strong></p>
-    <span>{{externo.color}}</span>
+<div class="principal">
+  <div class="contenido">
+    <div class="contenido-img">
+      <img src="{{externo.img}}" alt="">
+      <button class="btn btn-danger" id="boton" (click)="volver()">Volver</button>
+    </div>
+    <div class="contenido-text">
+      <h1>{{externo.marca}}</h1>
+      <p>Lorem ipsum dolor sit amet consectetur. <strong>{{externo.precio}}</strong></p>
+      <span>{{externo.color}}</span>
+    </div>
   </div>
 </div>
