modifique el formulario reactivo

--- a/src/app/components/alterno/alterno.component.html
+++ b/src/app/components/alterno/alterno.component.html
@@ -7,7 +7,7 @@
     <div class="contenido-text">
       <h1>{{externo.marca}}</h1>
       <p>Lorem ipsum dolor sit amet consectetur. <strong>{{externo.precio}}</strong></p>
-      <span>{{externo.color}}</span>
+      <span class="color2">{{externo.color}}</span>
     </div>
   </div>
 </div>
