--- a/src/app/components/reactivo/reactivo.component.html
+++ b/src/app/components/reactivo/reactivo.component.html
@@ -7,7 +7,7 @@
       type="text"
       placeholder="Nombre"
       formControlName="nombre">
-
+      <!--Spans-->
       <span *ngIf="nombreNoValid"
       [style.color]="'red'">
         Este campo debe tener mas de 5 caracteres
@@ -18,6 +18,7 @@
       type="text"
       placeholder="Apellido"
       formControlName="apellido">
+      <!--Spans-->
       <span *ngIf="apellidoNoValid"
       [style.color]="'red'">
         Este campo debe tener mas de 5 caracteres
@@ -28,6 +29,7 @@
       type="text"
       placeholder="Email"
       formControlName="email">
+      <!--Spans-->
       <span *ngIf="emailNoValid"
       [style.color]="'red'">
         Este campo requiere mas de 5 caracteres
