--- a/src/app/components/tenis/tenis.component.html
+++ b/src/app/components/tenis/tenis.component.html
@@ -1,5 +1,17 @@
-<h1 id="mio">Hoy tenemos las mejores ofertas de ropa <strong>Precio competitivos!</strong></h1>
-<hr>
+
+
+
+<div class="contenido">
+  <div class="contenido-2">
+  <a href="#" [routerLink]="['/tenis']"> <i class="fab fa-airbnb">E-Commerce</i></a>
+
+  <div class="contenido-input">
+    <input type="text" (change)="cambiar()">
+
+  </div>
+</div>
+</div>
+
 
 <div class="principal">
   <div class="cards">
