--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="logo">
-    <h1>Bienvenido</h1>
+    <h1>E-Commerce</h1>
   </div>
   <nav class="navegacion">
     <ul>
