--- a/src/app/components/tenis/tenis.component.css
+++ b/src/app/components/tenis/tenis.component.css
@@ -38,6 +38,8 @@
 }
 /*Final del inicio */
 
+/*Inicio de las cards */
+
 .principal{
   padding: 20px;
   padding-top: 0px;
@@ -61,3 +63,38 @@
 .card{
   width: 250px;
 }
+/*Fin de las cards*/
+
+/*Inicio dell banner*/
+.banner{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 100%;
+  gap: 230px;
+  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+  padding: 20px;
+  height: 300px;
+  overflow: auto;
+  margin: 20px auto;
+}
+
+.banner-text{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+}
+
+
+.banner-img img{
+  width: 300px;
+  height: 230px;
+}
+
+
+
+
+
+
+
+
